--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,9 @@
 
         <section id="downloads">
           {% if site.show_downloads %}
-            <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
-            <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
+            <a href="{{ site.github.zip_url }}" class="btn">Overview</a>
+            <a href="{{ site.github.tar_url }}" class="btn">Eligibility</a>
+            <a href="{{ site.github.tar_url }}" class="btn">Application</a>
           {% endif %}
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
