--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
             <a href="{{ site.github.tar_url }}" class="btn">Eligibility</a>
             <a href="{{ site.github.tar_url }}" class="btn">Application</a>
           {% endif %}
-          <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>Rules</a>
         </section>
       </div>
     </header>
