--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,11 +21,11 @@
 
         <section id="downloads">
           {% if site.show_downloads %}
-            <a href="{{ site.github.zip_url }}" class="btn">Overview</a>
-            <a href="{{ site.github.tar_url }}" class="btn">Eligibility</a>
-            <a href="{{ site.github.tar_url }}" class="btn">Application</a>
+            <a href="{{ #}}" class="btn">Overview</a>
+            <a href="{{ # }}" class="btn">Eligibility</a>
+            <a href="{{ # }}" class="btn">Application</a>
           {% endif %}
-          <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>Rules</a>
+          <a href="{{ # }}" class="btn btn-github"><span class="icon"></span>Rules</a>
         </section>
       </div>
     </header>
